// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationReducer  should handle CANCEL_ROUTE 1`] = `
Object {
  "endLocation": Array [],
  "endLocationSearch": "",
  "endLocationSearchResult": Array [],
  "erpCharge": Array [],
  "erpFiltered": Array [],
  "erpTotalCharge": Array [],
  "mapMatchedRoute": Array [],
  "mapPickerMode": 0,
  "mapPickerResult": Array [],
  "navigationRoute": Array [],
  "onRoute": false,
  "routeInstruction": Array [],
  "routeName": Array [],
  "routePlannerView": false,
  "startLocation": Array [],
  "startLocationSearch": "",
  "startLocationSearchResult": Array [],
  "stepNo": 0,
  "tripSummaryView": false,
}
`;

exports[`NavigationReducer  should handle FILTER_ROUTE_ERP 1`] = `
Object {
  "endLocation": Array [],
  "endLocationSearch": "",
  "endLocationSearchResult": Array [],
  "erpCharge": Array [],
  "erpFiltered": Array [
    undefined,
  ],
  "erpTotalCharge": Array [],
  "mapMatchedRoute": Array [],
  "mapPickerMode": 0,
  "mapPickerResult": Array [],
  "navigationRoute": Array [],
  "onRoute": false,
  "routeInstruction": Array [],
  "routeName": Array [],
  "routePlannerView": false,
  "startLocation": Array [],
  "startLocationSearch": "",
  "startLocationSearchResult": Array [],
  "stepNo": 0,
  "tripSummaryView": false,
}
`;

exports[`NavigationReducer  should handle MAP_MATCHING_SUCCEEDED 1`] = `
Object {
  "endLocation": Array [],
  "endLocationSearch": "",
  "endLocationSearchResult": Array [],
  "erpCharge": Array [],
  "erpFiltered": Array [],
  "erpTotalCharge": Array [],
  "mapMatchedRoute": Array [
    undefined,
  ],
  "mapPickerMode": 0,
  "mapPickerResult": Array [],
  "navigationRoute": Array [],
  "onRoute": false,
  "routeInstruction": Array [],
  "routeName": Array [],
  "routePlannerView": false,
  "startLocation": Array [],
  "startLocationSearch": "",
  "startLocationSearchResult": Array [],
  "stepNo": 0,
  "tripSummaryView": false,
}
`;

exports[`NavigationReducer  should handle PROCESS_END_LOCATION 1`] = `
Object {
  "endLocation": Array [
    undefined,
  ],
  "endLocationSearch": "",
  "endLocationSearchResult": Array [],
  "erpCharge": Array [],
  "erpFiltered": Array [],
  "erpTotalCharge": Array [],
  "mapMatchedRoute": Array [],
  "mapPickerMode": 0,
  "mapPickerResult": Array [],
  "navigationRoute": Array [],
  "onRoute": false,
  "routeInstruction": Array [],
  "routeName": Array [],
  "routePlannerView": false,
  "startLocation": Array [],
  "startLocationSearch": "",
  "startLocationSearchResult": Array [],
  "stepNo": 0,
  "tripSummaryView": false,
}
`;

exports[`NavigationReducer  should handle PROCESS_START_LOCATION 1`] = `
Object {
  "endLocation": Array [],
  "endLocationSearch": "",
  "endLocationSearchResult": Array [],
  "erpCharge": Array [],
  "erpFiltered": Array [],
  "erpTotalCharge": Array [],
  "mapMatchedRoute": Array [],
  "mapPickerMode": 0,
  "mapPickerResult": Array [],
  "navigationRoute": Array [],
  "onRoute": false,
  "routeInstruction": Array [],
  "routeName": Array [],
  "routePlannerView": false,
  "startLocation": Array [
    undefined,
  ],
  "startLocationSearch": "",
  "startLocationSearchResult": Array [],
  "stepNo": 0,
  "tripSummaryView": false,
}
`;

exports[`NavigationReducer  should handle REROUTE_SUCCEEDED 1`] = `
Object {
  "endLocation": Array [],
  "endLocationSearch": "",
  "endLocationSearchResult": Array [],
  "erpCharge": Array [],
  "erpFiltered": Array [],
  "erpTotalCharge": Array [],
  "mapMatchedRoute": Array [],
  "mapPickerMode": 0,
  "mapPickerResult": Array [],
  "navigationRoute": Array [],
  "onRoute": false,
  "routeInstruction": Array [],
  "routeName": Array [],
  "routePlannerView": false,
  "startLocation": Array [],
  "startLocationSearch": "",
  "startLocationSearchResult": Array [],
  "stepNo": 0,
  "tripSummaryView": false,
}
`;

exports[`NavigationReducer  should handle SAVE_ROUTE_NAME 1`] = `
Object {
  "endLocation": Array [],
  "endLocationSearch": "",
  "endLocationSearchResult": Array [],
  "erpCharge": Array [],
  "erpFiltered": Array [],
  "erpTotalCharge": Array [],
  "mapMatchedRoute": Array [],
  "mapPickerMode": 0,
  "mapPickerResult": Array [],
  "navigationRoute": Array [],
  "onRoute": false,
  "routeInstruction": Array [],
  "routeName": Array [
    undefined,
  ],
  "routePlannerView": false,
  "startLocation": Array [],
  "startLocationSearch": "",
  "startLocationSearchResult": Array [],
  "stepNo": 0,
  "tripSummaryView": false,
}
`;

exports[`NavigationReducer  should handle SEARCH_END_LOCATION_SUCCEEDED 1`] = `
Object {
  "endLocation": Array [],
  "endLocationSearch": "",
  "endLocationSearchResult": Array [
    undefined,
  ],
  "erpCharge": Array [],
  "erpFiltered": Array [],
  "erpTotalCharge": Array [],
  "mapMatchedRoute": Array [],
  "mapPickerMode": 0,
  "mapPickerResult": Array [],
  "navigationRoute": Array [],
  "onRoute": false,
  "routeInstruction": Array [],
  "routeName": Array [],
  "routePlannerView": false,
  "startLocation": Array [],
  "startLocationSearch": "",
  "startLocationSearchResult": Array [],
  "stepNo": 0,
  "tripSummaryView": false,
}
`;

exports[`NavigationReducer  should handle SEARCH_START_LOCATION_SUCCEEDED 1`] = `
Object {
  "endLocation": Array [],
  "endLocationSearch": "",
  "endLocationSearchResult": Array [],
  "erpCharge": Array [],
  "erpFiltered": Array [],
  "erpTotalCharge": Array [],
  "mapMatchedRoute": Array [],
  "mapPickerMode": 0,
  "mapPickerResult": Array [],
  "navigationRoute": Array [],
  "onRoute": false,
  "routeInstruction": Array [],
  "routeName": Array [],
  "routePlannerView": false,
  "startLocation": Array [],
  "startLocationSearch": "",
  "startLocationSearchResult": Array [
    undefined,
  ],
  "stepNo": 0,
  "tripSummaryView": false,
}
`;

exports[`NavigationReducer  should handle TRIP_SUMMARY 1`] = `
Object {
  "endLocation": Array [],
  "endLocationSearch": "",
  "endLocationSearchResult": Array [],
  "erpCharge": Array [],
  "erpFiltered": Array [],
  "erpTotalCharge": Array [],
  "mapMatchedRoute": Array [],
  "mapPickerMode": 0,
  "mapPickerResult": Array [],
  "navigationRoute": Array [],
  "onRoute": false,
  "routeInstruction": Array [],
  "routeName": Array [],
  "routePlannerView": false,
  "startLocation": Array [],
  "startLocationSearch": "",
  "startLocationSearchResult": Array [],
  "stepNo": 0,
  "tripSummaryView": true,
}
`;

exports[`NavigationReducer  should handle UPDATE_STEPS 1`] = `
Object {
  "endLocation": Array [],
  "endLocationSearch": "",
  "endLocationSearchResult": Array [],
  "erpCharge": Array [],
  "erpFiltered": Array [],
  "erpTotalCharge": Array [],
  "mapMatchedRoute": Array [],
  "mapPickerMode": 0,
  "mapPickerResult": Array [],
  "navigationRoute": Array [],
  "onRoute": false,
  "routeInstruction": Array [],
  "routeName": Array [],
  "routePlannerView": false,
  "startLocation": Array [],
  "startLocationSearch": "",
  "startLocationSearchResult": Array [],
  "stepNo": NaN,
  "tripSummaryView": false,
}
`;

exports[`NavigationReducer  should return the initial state 1`] = `
Object {
  "endLocation": Array [],
  "endLocationSearch": "",
  "endLocationSearchResult": Array [],
  "erpCharge": Array [],
  "erpFiltered": Array [],
  "erpTotalCharge": Array [],
  "mapMatchedRoute": Array [],
  "mapPickerMode": 0,
  "mapPickerResult": Array [],
  "navigationRoute": Array [],
  "onRoute": false,
  "routeInstruction": Array [],
  "routeName": Array [],
  "routePlannerView": false,
  "startLocation": Array [],
  "startLocationSearch": "",
  "startLocationSearchResult": Array [],
  "stepNo": 0,
  "tripSummaryView": false,
}
`;
